--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "@binance-chain/bsc-use-wallet": "^0.8.1",
     "@crowdin/crowdin-api-client": "^1.10.4",
     "@ethersproject/abi": "^5.0.7",
-    "@saltswap/uikit": "^1.0.0",
     "@reduxjs/toolkit": "^1.5.0",
+    "@saltswap/uikit": "^1.0.0",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "@types/react-router-dom": "^5.1.5",
@@ -55,6 +55,7 @@
     "react-scripts": "^4.0.1",
     "styled-components": "^5.1.1",
     "typescript": "^4.1.5",
+    "uikit": "^3.7.1",
     "web3": "^1.3.1"
   },
   "devDependencies": {
@@ -62,9 +63,9 @@
     "@commitlint/config-conventional": "^11.0.0",
     "@saltswap/eslint-config-salt": "1.0.0",
     "@types/jest": "^26.0.19",
+    "@types/react-redux": "^7.1.16",
     "eslint": "^7.20.0",
     "husky": "4.3.5",
-    "@types/react-redux": "^7.1.16",
     "prettier": "^2.1.2",
     "source-map-explorer": "^2.5.2",
     "ts-node": "^9.1.1"
