--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "react-scripts start",
-    "build": "CI=false react-scripts build",
+    "build": "CI=false mc-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
@@ -35,7 +35,7 @@
     "@crowdin/crowdin-api-client": "^1.10.4",
     "@ethersproject/abi": "^5.0.7",
     "@reduxjs/toolkit": "^1.5.0",
-    "@saltswap/uikit": "^1.0.0",
+    "@saltswap/uikit": "^1.2.32",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "@types/react-router-dom": "^5.1.5",
@@ -55,7 +55,6 @@
     "react-scripts": "^4.0.1",
     "styled-components": "^5.1.1",
     "typescript": "^4.1.5",
-    "uikit": "^3.7.1",
     "web3": "^1.3.1"
   },
   "devDependencies": {
